--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1334,6 +1334,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-langchain4j-agent-api</artifactId>
+        <version>4.14.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-langchain4j-chat</artifactId>
         <version>4.14.0-SNAPSHOT</version>
       </dependency>
