--- a/components/camel-ai/camel-langchain4j-tools/pom.xml
+++ b/components/camel-ai/camel-langchain4j-tools/pom.xml
@@ -45,6 +45,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-support</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jackson</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>dev.langchain4j</groupId>
@@ -56,11 +60,7 @@
             <artifactId>langchain4j-core</artifactId>
             <version>${langchain4j-version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson2-version}</version>
-        </dependency>
+
         <!-- test -->
         <dependency>
             <groupId>org.apache.camel</groupId>
