--- a/test-infra/camel-test-infra-neo4j/src/main/resources/org/apache/camel/test/infra/neo4j/services/container.properties
+++ b/test-infra/camel-test-infra-neo4j/src/main/resources/org/apache/camel/test/infra/neo4j/services/container.properties
@@ -15,4 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 neo4j.container=mirror.gcr.io/neo4j:5.26-community-ubi9
-neo4j.container.ppc64le=icr.io/ppc64le-oss/neo4j:4.4
+neo4j.container.ppc64le=icr.io/ppc64le-oss/neo4j-ppc64le:5.26.0
