CAMEL-22205: camel-jbang: Document all camel.jbang options for tooling

--- a/dsl/camel-jbang/camel-jbang-core/pom.xml
+++ b/dsl/camel-jbang/camel-jbang-core/pom.xml
@@ -179,7 +179,6 @@
 
     <build>
         <plugins>
-            <!-- generate and include all components in the catalog -->
             <plugin>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-package-maven-plugin</artifactId>
@@ -187,6 +186,7 @@
                     <execution>
                         <goals>
                             <goal>prepare-jbang</goal>
+                            <goal>prepare-jbang-doc</goal>
                         </goals>
                         <phase>generate-resources</phase>
                     </execution>
