--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -100,6 +100,7 @@
         <chunk-templates-version>3.6.2</chunk-templates-version>
         <classgraph-version>4.8.181</classgraph-version>
         <cloudant-version>0.10.6</cloudant-version>
+        <com-ibm-mq-jakarta-client-version>9.4.3.0</com-ibm-mq-jakarta-client-version>
         <cometd-java-client-version>8.0.9</cometd-java-client-version>
         <cometd-java-server-version>8.0.9</cometd-java-server-version>
         <commons-beanutils-version>1.11.0</commons-beanutils-version>
