--- a/test-infra/pom.xml
+++ b/test-infra/pom.xml
@@ -93,6 +93,7 @@
         <module>camel-test-infra-triton</module>
         <module>camel-test-infra-neo4j</module>
         <module>camel-test-infra-weaviate</module>
+        <module>camel-test-infra-ibmmq</module>
         <module>camel-test-infra-all</module>
     </modules>
 
