CAMEL-22300 basic tests using jms

--- a/components/camel-jms/pom.xml
+++ b/components/camel-jms/pom.xml
@@ -127,6 +127,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-infra-ibmmq</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+
+        <dependency>
             <groupId>org.messaginghub</groupId>
             <artifactId>pooled-jms</artifactId>
             <version>${pooled-jms-version}</version>
