CAMEL-22352: data formats configurer should have more details

--- a/components/camel-csv/pom.xml
+++ b/components/camel-csv/pom.xml
@@ -48,6 +48,11 @@
         <!-- testing -->
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-main</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring-xml</artifactId>
             <scope>test</scope>
         </dependency>
