--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -2085,7 +2085,7 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-test</artifactId>
-        <version>4.14.0</version>
+        <version>4.14.1-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
