--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -919,6 +919,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-groovy-xml</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-grpc</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
