CAMEL-22361: camel-groovy-xml - Add data format that uses groovy xml that is easy to use and no need for POJOs

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -149,6 +149,7 @@
         <module>camel-grape</module>
         <module>camel-graphql</module>
         <module>camel-grok</module>
+        <module>camel-groovy-xml</module>
         <module>camel-grpc</module>
         <module>camel-gson</module>
         <module>camel-guava-eventbus</module>
