CAMEL-22371: camel-ognl: deprecated

--- a/components/camel-ognl/pom.xml
+++ b/components/camel-ognl/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>camel-ognl</artifactId>
     <packaging>jar</packaging>
-    <name>Camel :: OGNL</name>
+    <name>Camel :: OGNL (deprecated)</name>
     <description>Camel OGNL support</description>
 
     <properties>
