--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1359,6 +1359,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-langchain4j-embeddingstore</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-langchain4j-tokenizer</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
