--- a/components/camel-ai/pom.xml
+++ b/components/camel-ai/pom.xml
@@ -42,6 +42,7 @@
         <module>camel-langchain4j-chat</module>
         <module>camel-langchain4j-core</module>
         <module>camel-langchain4j-embeddings</module>
+        <module>camel-langchain4j-embeddingstore</module>
         <module>camel-langchain4j-tokenizer</module>
         <module>camel-langchain4j-tools</module>
         <module>camel-langchain4j-web-search</module>
