--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1834,6 +1834,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-langchain4j-embeddingstore</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-langchain4j-tokenizer</artifactId>
                 <version>${project.version}</version>
             </dependency>
