(chores) camel-ai: replace langchain4j RC versions with their final versions
Signed-off-by: Otavio R. Piske <angusyoung@gmail.com>

--- a/components/camel-ai/camel-langchain4j-tokenizer/pom.xml
+++ b/components/camel-ai/camel-langchain4j-tokenizer/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-azure-open-ai</artifactId>
-            <version>${langchain4j-rc-version}</version>
+            <version>${langchain4j-version}</version>
             <scope>provided</scope>
         </dependency>
 
