CAMEL-22392: camel-resilience4j - Add micrometer support

--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1794,6 +1794,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-resilience4j-micrometer</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-resourceresolver-github</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
