--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2244,6 +2244,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-resilience4j-micrometer</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-resourceresolver-github</artifactId>
                 <version>${project.version}</version>
             </dependency>
