Enable ppc64le support for camel-qdrant

--- a/test-infra/camel-test-infra-qdrant/src/main/resources/org/apache/camel/test/infra/qdrant/services/container.properties
+++ b/test-infra/camel-test-infra-qdrant/src/main/resources/org/apache/camel/test/infra/qdrant/services/container.properties
@@ -15,3 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 qdrant.container=mirror.gcr.io/qdrant/qdrant:v1.15.1-unprivileged
+qdrant.container.ppc64le=icr.io/ppc64le-oss/qdrant-ppc64le:1.14.1
