--- a/test-infra/camel-test-infra-artemis/src/main/resources/org/apache/camel/test/infra/artemis/services/container.properties
+++ b/test-infra/camel-test-infra-artemis/src/main/resources/org/apache/camel/test/infra/artemis/services/container.properties
@@ -15,3 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 artemis.container=quay.io/artemiscloud/activemq-artemis-broker:latest
+artemis.container.ppc64le=icr.io/ppc64le-oss/activemq-artemis-broker-ppc64le:2.0.2
