--- a/.github/workflows/generic-pr/label-config.yml
+++ b/.github/workflows/generic-pr/label-config.yml
@@ -18,8 +18,13 @@
 camel-4:
   - base-branch:
       - 'main'
+
+lts:
+  - base-branch:
       - 'camel-4.4.x'
       - 'camel-4.8.x'
+      - 'camel-4.10.x'
+      - 'camel-4.14.x'
 
 ci:
   - changed-files:
