--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -253,6 +253,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-aws2-textract</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-aws2-timestream</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
