--- a/components/camel-aws/pom.xml
+++ b/components/camel-aws/pom.xml
@@ -63,6 +63,7 @@
         <module>camel-aws2-sqs</module>
         <module>camel-aws2-step-functions</module>
         <module>camel-aws2-sts</module>
+        <module>camel-aws2-textract</module>
         <module>camel-aws2-timestream</module>
         <module>camel-aws2-translate</module>
         <module>camel-aws-xray</module>
