--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -904,6 +904,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-aws2-textract</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-aws2-timestream</artifactId>
                 <version>${project.version}</version>
             </dependency>
