--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -914,6 +914,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-aws2-transcribe</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-aws2-translate</artifactId>
                 <version>${project.version}</version>
             </dependency>
