--- a/docs/package.json
+++ b/docs/package.json
@@ -11,11 +11,11 @@
     "eslint": "^9.35.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^17.22.0",
+    "eslint-plugin-n": "^17.23.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.6.0",
-    "gulp": "~4.0",
-    "gulp-cli": "~3.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "gulp": "^5.0",
+    "gulp-cli": "^3.1",
     "gulp-inject": "^5.0.5",
     "gulp-rename": "^2.1.0",
     "gulp-sort": "^2.0.0",
