--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -724,6 +724,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-docling</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-drill</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
