--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1264,6 +1264,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-docling</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-drill</artifactId>
                 <version>${project.version}</version>
             </dependency>
