--- a/components/camel-milo/pom.xml
+++ b/components/camel-milo/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.camel</groupId>
         <artifactId>components</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.15.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-milo</artifactId>
@@ -32,6 +32,8 @@
     <description>Camel OPC UA support</description>
 
     <properties>
+        <version.milo>1.0.5</version.milo>
+        <version.guava>33.4.8-jre</version.guava>
     </properties>
 
     <dependencies>
@@ -40,35 +42,61 @@
             <artifactId>camel-support</artifactId>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.milo</groupId>-->
+<!--            <artifactId>sdk-server</artifactId>-->
+<!--            <version>${milo-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
-            <artifactId>sdk-server</artifactId>
-            <version>${milo-version}</version>
+            <artifactId>milo-sdk-server</artifactId>
+            <version>${version.milo}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.milo</groupId>-->
+<!--            <artifactId>sdk-client</artifactId>-->
+<!--            <version>${milo-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
-            <artifactId>sdk-client</artifactId>
-            <version>${milo-version}</version>
+            <artifactId>milo-sdk-client</artifactId>
+            <version>${version.milo}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.milo</groupId>-->
+<!--            <artifactId>stack-core</artifactId>-->
+<!--            <version>${milo-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
-            <artifactId>stack-core</artifactId>
-            <version>${milo-version}</version>
+            <artifactId>milo-stack-core</artifactId>
+            <version>${version.milo}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.milo</groupId>-->
+<!--            <artifactId>dictionary-manager</artifactId>-->
+<!--            <version>${milo-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
-            <artifactId>dictionary-manager</artifactId>
-            <version>${milo-version}</version>
+            <artifactId>milo-dtd-manager</artifactId>
+            <version>${version.milo}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.google.guava</groupId>-->
+<!--            <artifactId>guava</artifactId>-->
+<!--            <version>${milo-guava-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${milo-guava-version}</version>
+            <version>${version.guava}</version>
         </dependency>
+
 
         <!-- testing -->
         <dependency>
@@ -81,11 +109,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.logging.log4j</groupId>-->
+<!--            <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
