feat(components): Camel MDC

--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1474,6 +1474,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-mdc</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-metrics</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
