--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1934,6 +1934,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-mdc</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-metrics</artifactId>
                 <version>${project.version}</version>
             </dependency>
