CAMEL-8249 - camel-keycloak - A security component

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1794,6 +1794,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-keycloak</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-knative</artifactId>
                 <version>${project.version}</version>
             </dependency>
