--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1319,6 +1319,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-keycloak</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-knative</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
