--- a/dsl/camel-jbang/camel-jbang-container/Dockerfile
+++ b/dsl/camel-jbang/camel-jbang-container/Dockerfile
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-FROM docker.io/eclipse-temurin:21-jdk
+FROM mirror.gcr.io/library/eclipse-temurin:21-jdk
 
 ENV JBANG_VERSION=0.129.0
 # /!\ Camel version must be changed in the entrypoint line too
@@ -30,6 +30,5 @@ RUN jbang trust add https://github.com/apache/camel
 
 # used to initiliaze dependencies in the docker image
 RUN jbang -Dcamel.jbang.version=$CAMEL_VERSION camel@apache/camel version
-    
-ENTRYPOINT [ "jbang", "-Dcamel.jbang.version=4.14.0", "camel@apache/camel"]
 
+ENTRYPOINT [ "jbang", "-Dcamel.jbang.version=4.14.0", "camel@apache/camel"]
