CAMEL-22470 - Camel-Keycloak: Add test-infra module for Keycloak
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/test-infra/pom.xml
+++ b/test-infra/pom.xml
@@ -79,6 +79,7 @@
         <module>camel-test-infra-ignite</module>
         <module>camel-test-infra-hashicorp-vault</module>
         <module>camel-test-infra-jetty</module>
+        <module>camel-test-infra-keycloak</module>
         <module>camel-test-infra-core</module>
         <module>camel-test-infra-opensearch</module>
         <module>camel-test-infra-smb</module>
