--- a/components/camel-ai/camel-langchain4j-embeddingstore/pom.xml
+++ b/components/camel-ai/camel-langchain4j-embeddingstore/pom.xml
@@ -47,6 +47,11 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-langchain4j-embeddingstore-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-langchain4j-embeddings</artifactId>
         </dependency>
 
