--- a/components/camel-keycloak/pom.xml
+++ b/components/camel-keycloak/pom.xml
@@ -34,6 +34,9 @@
     <properties>
         <firstVersion>4.15.0</firstVersion>
         <label>security</label>
+        <!-- Container images not available on these architectures -->
+        <skipITs.ppc64le>true</skipITs.ppc64le>
+        <skipITs.s390x>true</skipITs.s390x>
     </properties>
 
     <dependencies>
