CAMEL-22340: Fix env var documentation for camel-jbang-kubernetes

--- a/dsl/camel-jbang/camel-jbang-plugin-kubernetes/src/test/resources/application.properties
+++ b/dsl/camel-jbang/camel-jbang-plugin-kubernetes/src/test/resources/application.properties
@@ -16,3 +16,5 @@
 ## ---------------------------------------------------------------------------
 
 camel.jbang.trait.ingress.enabled = true
+
+camel.jbang.trait.environment.vars='MY_VAR="my value"','MY_ENV=fuzz'
