CAMEL-22487 - Camel-Keycloak: Create a Consumer for user and admin events
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/test-infra/camel-test-infra-keycloak/pom.xml
+++ b/test-infra/camel-test-infra-keycloak/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>${keycloak-client-version}</version>
+        </dependency>
     </dependencies>
 
 </project>
