--- a/components/camel-keycloak/src/test/resources/log4j2.properties
+++ b/components/camel-keycloak/src/test/resources/log4j2.properties
@@ -27,7 +27,7 @@ appender.stdout.layout.pattern = %d [%-15.15t] %-5p %-30.30c{1} - %m%n
 
 rootLogger.level = INFO
 rootLogger.appenderRef.file.ref = file
-rootLogger.appenderRef.stdout.ref = stdout
+#rootLogger.appenderRef.stdout.ref = stdout
 
 logger.camel.name = org.apache.camel
 logger.camel.level = INFO
