CAMEL-22490: camel-minio - Upgrade to 8.6.0

--- a/components/camel-minio/pom.xml
+++ b/components/camel-minio/pom.xml
@@ -48,6 +48,17 @@
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <version>${minio-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.squareup.okhttp3</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-jvm</artifactId>
+            <version>${squareup-okhttp5-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
