--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -384,7 +384,7 @@
         <mina-version>2.2.4</mina-version>
         <minidns-version>0.3.4</minidns-version>
         <minimal-json-version>0.9.5</minimal-json-version>
-        <minio-version>8.5.17</minio-version>
+        <minio-version>8.6.0</minio-version>
         <mock-javamail-version>1.9</mock-javamail-version>
         <mockito-version>5.20.0</mockito-version>
         <mojo-executor-version>2.4.1</mojo-executor-version>
@@ -491,6 +491,7 @@
         <spring-ws-version>4.1.1</spring-ws-version>
         <sql-maven-plugin-version>3.0.0</sql-maven-plugin-version>
         <squareup-okhttp-version>3.14.9</squareup-okhttp-version>
+        <squareup-okhttp5-version>5.1.0</squareup-okhttp5-version>
         <squareup-okio-version>1.17.5</squareup-okio-version>
         <sshd-version>2.16.0</sshd-version>
         <stompjms-version>1.19</stompjms-version>
