Execute tests with ollama and granite4 models

--- a/components/camel-ai/camel-langchain4j-agent/pom.xml
+++ b/components/camel-ai/camel-langchain4j-agent/pom.xml
@@ -78,6 +78,12 @@
           <version>${langchain4j-version}</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>dev.langchain4j</groupId>
+          <artifactId>langchain4j-ollama</artifactId>
+          <version>${langchain4j-version}</version>
+          <scope>test</scope>
+      </dependency>
 
       <dependency>
           <groupId>dev.langchain4j</groupId>
