CAMEL-22086 - Reinstate camel-milo as milo has reached 1.0.0
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/components/camel-milo/pom.xml
+++ b/components/camel-milo/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility-version}</version>
+            <scope>test</scope>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.apache.logging.log4j</groupId>-->
 <!--            <artifactId>log4j-slf4j-impl</artifactId>-->
