--- a/pom.xml
+++ b/pom.xml
@@ -311,7 +311,10 @@
                                     <exclude>**/README</exclude>
                                     <exclude>**/TestImpl*</exclude>
                                     <exclude>**/archetype-resources/**</exclude>
-                                    <exclude>**/ca-openssl.cnf</exclude>
+				    <exclude>**/ca-openssl.cnf</exclude>
+				    <exclude>**/openssl-ca.cnf</exclude>
+				    <exclude>**/openssl-server.cnf</exclude>
+				    <exclude>**/keystore</exclude>
                                     <exclude>**/cacerts</exclude>
                                     <exclude>**/cxf.extension</exclude>
                                     <exclude>**/dhis.conf</exclude>
