--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1987,6 +1987,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
+                <artifactId>camel-milo</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
                 <artifactId>camel-milvus</artifactId>
                 <version>${project.version}</version>
             </dependency>
