CAMEL-22086 - Reinstate camel-milo as milo has reached 1.0.0
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/bom/camel-bom/pom.xml
+++ b/bom/camel-bom/pom.xml
@@ -1524,13 +1524,13 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
-        <artifactId>camel-milvus</artifactId>
+        <artifactId>camel-milo</artifactId>
         <version>4.15.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
-        <artifactId>camel-milo</artifactId>
-        <version>${project.version}</version>
+        <artifactId>camel-milvus</artifactId>
+        <version>4.15.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
