--- a/test-infra/camel-test-infra-all/pom.xml
+++ b/test-infra/camel-test-infra-all/pom.xml
@@ -261,6 +261,11 @@
             <artifactId>camel-test-infra-keycloak</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-test-infra-docling</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -535,7 +540,13 @@
                                         <groupId>org.apache.camel</groupId>
                                         <artifactId>camel-test-infra-keycloak</artifactId>
                                     </dependency>
-                                </fileSet>                                
+                                </fileSet>
+                                <fileSet>
+                                    <dependency>
+                                        <groupId>org.apache.camel</groupId>
+                                        <artifactId>camel-test-infra-docling</artifactId>
+                                    </dependency>
+                                </fileSet>                                 
                             </fileSets>
                         </configuration>
                     </execution>
