Upgrade Milo version to 1.0.6
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -380,6 +380,7 @@
         <micrometer-version>1.15.4</micrometer-version>
         <micrometer-tracing-version>1.5.4</micrometer-tracing-version>
         <microprofile-config-version>3.1</microprofile-config-version>
+        <milo-version>1.0.6</milo-version>
         <milvus-client-version>2.6.5</milvus-client-version>
         <mina-version>2.2.4</mina-version>
         <minidns-version>0.3.4</minidns-version>
