--- a/components/camel-milo/pom.xml
+++ b/components/camel-milo/pom.xml
@@ -31,70 +31,40 @@
     <name>Camel :: Milo</name>
     <description>Camel OPC UA support</description>
 
-    <properties>
-        <version.milo>1.0.5</version.milo>
-        <version.guava>33.4.8-jre</version.guava>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-support</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.eclipse.milo</groupId>-->
-<!--            <artifactId>sdk-server</artifactId>-->
-<!--            <version>${milo-version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
             <artifactId>milo-sdk-server</artifactId>
-            <version>${version.milo}</version>
+            <version>${milo-version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.eclipse.milo</groupId>-->
-<!--            <artifactId>sdk-client</artifactId>-->
-<!--            <version>${milo-version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
             <artifactId>milo-sdk-client</artifactId>
-            <version>${version.milo}</version>
+            <version>${milo-version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.eclipse.milo</groupId>-->
-<!--            <artifactId>stack-core</artifactId>-->
-<!--            <version>${milo-version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
             <artifactId>milo-stack-core</artifactId>
-            <version>${version.milo}</version>
+            <version>${milo-version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.eclipse.milo</groupId>-->
-<!--            <artifactId>dictionary-manager</artifactId>-->
-<!--            <version>${milo-version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.milo</groupId>
             <artifactId>milo-dtd-manager</artifactId>
-            <version>${version.milo}</version>
+            <version>${milo-version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.google.guava</groupId>-->
-<!--            <artifactId>guava</artifactId>-->
-<!--            <version>${milo-guava-version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${version.guava}</version>
+            <version>${guava-version}</version>
         </dependency>
 
 
@@ -115,11 +85,6 @@
             <version>${awaitility-version}</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.logging.log4j</groupId>-->
-<!--            <artifactId>log4j-slf4j-impl</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
 </project>
